# kisti-mcp

./: .env.example  .env.sample  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  claude_desktop_config.json.example  kisti-mcp-server.py  kisti_mcp.py  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  publish.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: install-simplification.md
.sisyphus/evidence/: rename-entrypoint-start.txt  rename-legacy-alias.txt  rename-task-1-baseline.txt  rename-wheel-smoke.txt  task-1-baseline.txt  task-4-tests.txt
.sisyphus/notepads/kisti-mcp-import-quality-foundation/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/rename-kisti-mcp-and-deployment/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: kisti-mcp-import-quality-foundation.md  rename-kisti-mcp-and-deployment.md
docs/: release-and-distribution.md
media/: readme
tests/: conftest.py  test_ntis_http.py  test_parsing.py  test_smoke.py
