[project]
name = "kisti-mcp-server"
version = "0.3.12"
description = "KISTI-MCP Server - MCP server for KISTI OpenAPI (ScienceON, NTIS, DataON)"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "raezero", email = "raezero@kisti.re.kr"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.0",
    "httpx>=0.25.0",
    "pycryptodome>=3.19.0",
]
keywords = ["kisti", "scienceon","ntis","dataon", "mcp", "research", "papers","report","research data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ansua79/kisti-mcp"
Repository = "https://github.com/ansua79/kisti-mcp"
Issues = "https://github.com/ansua79/kisti-mcp/issues"

# [project.scripts]
# kisti-mcp-server = "kisti-mcp-server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"